; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_dhcp6-network.c_dhcp6_network_send_udp_socket.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd-network/extr_dhcp6-network.c_dhcp6_network_send_udp_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }
%union.sockaddr_union = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32 }

@DHCP6_PORT_SERVER = common dso_local global i32 0, align 4
@AF_INET6 = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dhcp6_network_send_udp_socket(i32 %0, %struct.in6_addr* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.in6_addr*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %union.sockaddr_union, align 4
  %11 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.in6_addr* %1, %struct.in6_addr** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = bitcast %union.sockaddr_union* %10 to %struct.TYPE_2__*
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 0, i32* %13, align 4
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 1
  %15 = load i32, i32* @DHCP6_PORT_SERVER, align 4
  %16 = call i32 @htobe16(i32 %15)
  store i32 %16, i32* %14, align 4
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 2
  %18 = load i32, i32* @AF_INET6, align 4
  store i32 %18, i32* %17, align 4
  %19 = load %struct.in6_addr*, %struct.in6_addr** %7, align 8
  %20 = call i32 @assert(%struct.in6_addr* %19)
  %21 = bitcast %union.sockaddr_union* %10 to %struct.TYPE_2__*
  %22 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i32 0, i32 0
  %23 = load %struct.in6_addr*, %struct.in6_addr** %7, align 8
  %24 = call i32 @memcpy(i32* %22, %struct.in6_addr* %23, i32 4)
  %25 = load i32, i32* %6, align 4
  %26 = load i8*, i8** %8, align 8
  %27 = load i64, i64* %9, align 8
  %28 = bitcast %union.sockaddr_union* %10 to i32*
  %29 = call i32 @sendto(i32 %25, i8* %26, i64 %27, i32 0, i32* %28, i32 12)
  store i32 %29, i32* %11, align 4
  %30 = load i32, i32* %11, align 4
  %31 = icmp slt i32 %30, 0
  br i1 %31, label %32, label %35

32:                                               ; preds = %4
  %33 = load i32, i32* @errno, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %5, align 4
  br label %36

35:                                               ; preds = %4
  store i32 0, i32* %5, align 4
  br label %36

36:                                               ; preds = %35, %32
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @htobe16(i32) #1

declare dso_local i32 @assert(%struct.in6_addr*) #1

declare dso_local i32 @memcpy(i32*, %struct.in6_addr*, i32) #1

declare dso_local i32 @sendto(i32, i8*, i64, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
